ADD: SIMD to benchmarks
Signed-off-by: Thomas Zamojski <thomas.zamojski@quadratic-labs.com>